<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.innerCat.multiQR.MainActivity">
    <item
        android:id="@+id/action_add_manually"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/action_add_manually"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_baseline_email_24"
        android:title="@string/action_send"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>